--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <ul class="nav masthead-nav">
                                 <li><a href="#home">Home</a></li>
                                 <li><a href="#skills">Skills</a></li>
-                                <li><a href="#work">Experience</a></li>
+                                <li><a href="#resume">R&eacute;sum&eacute;</a></li>
                                 <li><a href="#contact">Contact</a></li>
                             </ul>
                         </nav>
